feat: add analysis deletion flow
